data/derived/sp14/progs/unify/prog4575.ml.out
Characters 111-119:
  let seen' = if !List.mem(h,seen) then seen@ [h]  in
                  ^^^^^^^^
Error: This expression has type 'a -> 'a list -> bool
       but an expression was expected of type 'b ref
